---
source: inline/tests/parser/mod.rs
info: "Test 'bold-not-bold' from 'markup/bold.yml'"
---
Bold @ (1:1)->(1:9) (
    Plain @ (1:3)->(1:7) (
        Bold
        ^^^^
    )
)
Plain @ (1:9)->(1:19) (
     not bold.
    ^^^^^^^^^^
)

---
With input:

**Bold** not bold.


